scgrp-17/gke/networkpolicies/web-net-allow.yaml
# allow traffic from external clients to the web
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-net-allow
spec:
  podSelector:
    matchLabels:
      app: frontendapp
      role: web
  ingress:
  - {}
